crates/rome_js_formatter/tests/specs/prettier/js/arrows-bind/arrows-bind.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
a => ({}::b()``[''].c++ && 0 ? 0 : 0);
(a => b)::c;
a::(b => c);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,6 @@
-(a) => ({}::b()``[""].c++ && 0 ? 0 : 0);
-((a) => b)::c;
-a::((b) => c);
+a => ({}
+::b()``[''].c++ && 0 ? 0 : 0)
+(a) => b;
+::c
+a:
+:(b => c)
```

# Output

```js
a => ({}
::b()``[''].c++ && 0 ? 0 : 0)
(a) => b;
::c
a:
:(b => c)
```


# Errors
```
error[SyntaxError]: expected `)` but instead found `:`
  ┌─ arrows-bind.js:1:9
  │
1 │ a => ({}::b()``[''].c++ && 0 ? 0 : 0);
  │         ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ arrows-bind.js:2:9
  │
2 │ (a => b)::c;
  │ --------^
  │ │       │
  │ │       An explicit or implicit semicolon is expected here...
  │ ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found ':'
  ┌─ arrows-bind.js:3:3
  │
3 │ a::(b => c);
  │   ^ Expected a statement here


```


